# klarpdf

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  PLAN.md  PROGRESS.md  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_LICENSES  app.py  launcher.py  main_window.py  platform_integration.py  pyproject.toml  requirements-build-win.txt  requirements-build.in  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements-win.txt  requirements.in  requirements.txt  tasks.py  version.py
.github/: FUNDING.yml  pull_request_template.md
model/: __init__.py  content_marks.py  edit_commands.py  edit_engine.py  export.py  foreign_annots.py  form_fields.py  links_remap.py  metadata.py  page_edits.py  toc_remap.py  virtual_document.py
organize/: __init__.py  annotations_panel.py  outline_panel.py  thumbnail_panel.py
packaging/: build.ps1  installer.iss  klarpdf.spec  make_icon.py  pdfproj.spec
store/: __init__.py  file_watch.py  settings.py
tests/: conftest.py  test_about_dialog.py  test_annotation_roundtrip.py  test_annotation_z_preview.py  test_annotations.py  test_annotations_panel.py  test_annotations_ui.py  test_app_mutex.py  test_content_marks.py  test_context_menus.py  test_crop.py  test_dashed_arrowhead.py  test_dashed_line.py  test_drag_drop.py  test_draw_tools.py  test_edit_keeps_place.py  test_editing.py  test_encrypted.py  test_encryption.py  test_export.py  test_external_change.py  test_find_options.py  test_foreign_adopt.py  test_foreign_annots.py  test_foreign_move.py  test_form_fill.py  (+55 more)
(+43 files in other folders)
